--- a/views/games/index.ejs
+++ b/views/games/index.ejs
@@ -6,8 +6,13 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>VG Main Site</h1>
-    <a href=""> Add a Game</a>
-    <a>Browse Games</a>
+    <h1>Video Games/indexejs</h1>
+    <ul>
+        <!-- <% vGame.forEach((game) => { %>
+        <li>
+            <%= game.Title %>
+        </li>
+        <% }) %>  -->
+    </ul>
 </body>
 </html>
