--- a/views/games/show.ejs
+++ b/views/games/show.ejs
@@ -6,8 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>VG Main Site</h1>
-    <a href=""> Add a Game</a>
-    <a>Browse Games</a>
+    <h1>VG Show Page</h1>
 </body>
 </html>
