Changed to planets,GET+POST

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Planets App</title>
 </head>
 <body>
-    <h1>VG Main Site</h1>
-    <a href=""> Add a Game</a>
-    <a>Browse Games</a>
+    <h1>Planet App</h1>
+    <p> An App for planets</p>
+    <a class="planets-link" href="/planets">Browse Planets</a>
+    <a class="planets-link" href="/planets/new">New Planets</a>
 </body>
 </html>
