--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,9 +6,8 @@
     <title>Planets App</title>
 </head>
 <body>
+    <%- include('./partials/_nav.ejs') %>
     <h1>Planet App</h1>
     <p> An App for planets</p>
-    <a class="planets-link" href="/planets">Browse Planets</a>
-    <a class="planets-link" href="/planets/new">New Planets</a>
 </body>
 </html>
