--- a/views/planets/index.ejs
+++ b/views/planets/index.ejs
@@ -7,5 +7,13 @@
 </head>
 <body>
     <h1>Planets Listed Here!!</h1>
+    <ul>
+        <% planets.forEach((planet) => { %>
+            <li>
+                <%= planet.name %> is made of <%= planet.matter %>. It is planet number <%= planet.position %> 
+            </li>
+        <% }) %>
+        
+    </ul>
 </body>
 </html>
