--- a/views/planets/new.ejs
+++ b/views/planets/new.ejs
@@ -11,7 +11,7 @@
         <label for="name">Name: </label>
         <input type="text" name="name" id="name">
         <label for="position">Number: </label>
-        <input type="number" name="position" id="position" min="1" max="9">
+        <input type="number" name="position" id="position" min="1">
         <label for="matter">Matter: </label>
         <input type="text" name="matter" id="matter">
         <button type="submit">Submit</button>
