Created show page

--- a/views/planets/index.ejs
+++ b/views/planets/index.ejs
@@ -13,7 +13,10 @@
                 <%= planet.name %> is made of <%= planet.matter %>. It is planet number <%= planet.position %> 
             </li>
         <% }) %>
-        
+        <p>
+            <a href="/planets/new">Add Another!</a>
+            <a href="/">Home Page</a>
+        </p>
     </ul>
 </body>
 </html>
