--- a/views/planets/new.ejs
+++ b/views/planets/new.ejs
@@ -16,5 +16,7 @@
         <input type="text" name="matter" id="matter">
         <button type="submit">Submit</button>
     </form>
+    <a href="/planets">View Planets!</a>
+    <a href="/">Home Page</a>
 </body>
 </html>
