--- a/views/planets/index.ejs
+++ b/views/planets/index.ejs
@@ -11,7 +11,7 @@
         <% planets.forEach((planet) => { %>
             <li>
                 <a href="/planets/<%= planet._id %>">
-                    <%= planet.name %> is primarily made of <%= planet.matter %>s. It is planet number <%= planet.position %> 
+                    <%= planet.name %> is primarily made of <%= planet.matter %>. It is planet number <%= planet.position %> 
                 </a>
             </li>
         <% }) %>
